--- a/ubuntu/vivado/2019.1/vnc/.gitlab-ci.yml
+++ b/ubuntu/vivado/2019.1/vnc/.gitlab-ci.yml
@@ -3,5 +3,6 @@ build_ubuntu_vivado2019-1_vnc:
     variables:
         OS: ubuntu
         OS_VERSION: "18.04"
+        SERIES: "vivado"
+        VERSION: "2019.1"
         VIEW: vnc
-        VIVADO_VERSION: "2019.1"
