--- a/sl/vivado/2019.2/x11/.gitlab-ci.yml
+++ b/sl/vivado/2019.2/x11/.gitlab-ci.yml
@@ -6,3 +6,17 @@ build_sl_vivado2019-2_x11:
         SERIES: "vivado"
         VERSION: "2019.2"
         VIEW: x11
+
+build_sl_vivado2019-2_x11_dockerhub:
+    extends: .job_template
+    variables:
+        CI_REGISTRY: https://index.docker.io/v1/
+        CI_REGISTRY_USER: ${DOCKER_USERNAME}
+        CI_REGISTRY_PASSWORD: ${DOCKER_PASSWORD}
+        CI_REGISTRY_IMAGE:  index.docker.io/vivado-docker
+        OS: sl
+        OS_VERSION: "7"
+        SERIES: "vivado"
+        TO: "${CI_REGISTRY_IMAGE}:${OS}${OS_VERSION}_${SERIES}${VERSION}_${VIEW}"
+        VERSION: "2019.2"
+        VIEW: x11
