--- a/sl/vivado/2019.2/x11/.gitlab-ci.yml
+++ b/sl/vivado/2019.2/x11/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build_sl_vivado2019-2_x11_dockerhub:
         CI_REGISTRY: https://index.docker.io/v1/
         CI_REGISTRY_USER: ${DOCKER_USERNAME}
         CI_REGISTRY_PASSWORD: ${DOCKER_PASSWORD}
-        CI_REGISTRY_IMAGE:  index.docker.io/${CI_REGISTRY_USER}
+        CI_REGISTRY_IMAGE:  index.docker.io/aperloff
         OS: sl
         OS_VERSION: "7"
         SERIES: "vivado"
