Turn off some jobs for testing. Add some debugging information and look at the checksum of the merged tarball.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ stages:
         name: gitlab-registry.cern.ch/ci-tools/docker-image-builder
         entrypoint: [""]
     variables:
+        DOCKER_DRIVER: overlay2
         NO_CACHE: "true"
         CONTEXT_DIR: "${OS}/${SERIES}/${VERSION}/${VIEW}/"
         FROM: "${OS}:${OS_VERSION}"
@@ -45,8 +46,8 @@ stages:
 
 # Jobs/Includes ---------------------------------------------------------------
 include:
-    - local: '/ubuntu/vivado/2019.1/vnc/.gitlab-ci.yml'
-    - local: '/sl/vivado/2018.2/x11/.gitlab-ci.yml'
-    - local: '/sl/vivado/2019.1/x11/.gitlab-ci.yml'
-    - local: '/sl/vivado/2019.2/x11/.gitlab-ci.yml'
+#    - local: '/ubuntu/vivado/2019.1/vnc/.gitlab-ci.yml'
+#    - local: '/sl/vivado/2018.2/x11/.gitlab-ci.yml'
+#    - local: '/sl/vivado/2019.1/x11/.gitlab-ci.yml'
+#    - local: '/sl/vivado/2019.2/x11/.gitlab-ci.yml'
     - local: '/sl/vitis/2019.2/x11/.gitlab-ci.yml'
