--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ stages:
         name: gitlab-registry.cern.ch/ci-tools/docker-image-builder
         entrypoint: [""]
     variables:
-        DOCKER_DRIVER: overlay2
+        DOCKER_DRIVER: overlay
         NO_CACHE: "true"
         CONTEXT_DIR: "${OS}/${SERIES}/${VERSION}/${VIEW}/"
         FROM: "${OS}:${OS_VERSION}"
